--- a/Cadres/app/src/main/res/layout/item_gb.xml
+++ b/Cadres/app/src/main/res/layout/item_gb.xml
@@ -50,7 +50,7 @@
         android:background="@color/color_ffe5ce"
         android:paddingStart="@dimen/dp_15"
         android:visibility="gone"
-        android:textSize="@dimen/sp_14"
+        android:textSize="@dimen/sp_12"
         tools:visibility="visible"
         android:paddingEnd="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_5"
@@ -65,10 +65,12 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="@dimen/dp_60"
+        android:layout_width="@dimen/dp_50"
         android:layout_height="0dp"
         android:gravity="center"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/view_head"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,43 +78,77 @@
 
     <TextView
         android:id="@+id/tv_xrzw"
-        android:layout_width="@dimen/dp_140"
+        android:layout_width="@dimen/dp_70"
         android:layout_height="0dp"
         android:gravity="center"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="现任职务现任职务现任职务现任职务现任职职务现任职务现任职务"/>
+        tools:text="现任职务"/>
 
     <TextView
         android:id="@+id/tv_xrzsj"
-        android:layout_width="@dimen/dp_90"
+        android:layout_width="@dimen/dp_70"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="现任职时间"/>
 
     <TextView
-        android:id="@+id/tv_zwjb"
-        android:layout_width="@dimen/dp_100"
+        android:id="@+id/tv_xrzwcc"
+        android:layout_width="@dimen/dp_70"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="现任职务\n层次"/>
+
+    <TextView
+        android:id="@+id/tv_xrzwccsj"
+        android:layout_width="@dimen/dp_70"
+        android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@+id/tv_xrzwcc"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="现任职务\n层次时间"/>
+
+    <TextView
+        android:id="@+id/tv_zwjb"
+        android:layout_width="@dimen/dp_70"
+        android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_xrzwccsj"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="职务级别"/>
 
     <TextView
         android:id="@+id/tv_rzjsj"
-        android:layout_width="@dimen/dp_90"
+        android:layout_width="@dimen/dp_70"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,10 +156,12 @@
 
     <TextView
         android:id="@+id/tv_sex"
-        android:layout_width="@dimen/dp_50"
+        android:layout_width="@dimen/dp_40"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_rzjsj"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -131,10 +169,12 @@
 
     <TextView
         android:id="@+id/tv_place"
-        android:layout_width="@dimen/dp_60"
+        android:layout_width="@dimen/dp_50"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_sex"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -142,10 +182,12 @@
 
     <TextView
         android:id="@+id/tv_csny"
-        android:layout_width="@dimen/dp_90"
+        android:layout_width="@dimen/dp_70"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_place"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -155,21 +197,39 @@
         android:id="@+id/tv_qrzwhcd"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
-        app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
+        app:layout_constraintEnd_toStartOf="@+id/tv_qrzzy"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:text="全日制文化程度"/>
 
     <TextView
+        android:id="@+id/tv_qrzzy"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textSize="@dimen/sp_12"
+        android:gravity="center"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
+        app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="全日制\n专业"/>
+
+    <TextView
         android:id="@+id/tv_zzwhcd"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/sp_12"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
+        android:paddingStart="@dimen/dp_5"
+        android:paddingEnd="@dimen/dp_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_qrzzy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
