--- a/Cadres/app/src/main/res/layout/activity_gb_drawer.xml
+++ b/Cadres/app/src/main/res/layout/activity_gb_drawer.xml
@@ -19,88 +19,43 @@
         android:orientation="vertical"
         android:layout_gravity="start">
 
-        <EditText
-            android:id="@+id/et_left_search"
+        <include
+            layout="@layout/activity_gb_drawer_left"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_42"
-            android:background="@color/color_fbe7e5"
-            android:layout_marginStart="@dimen/dp_20"
-            android:layout_marginEnd="@dimen/dp_20"
-            android:hint="搜索"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_marginBottom="@dimen/dp_20"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:maxLength="10"
-            android:maxLines="1"
-            android:drawableLeft="@mipmap/ic_search"
-            android:drawablePadding="@dimen/dp_10"
-            android:paddingStart="@dimen/dp_15"
-            android:paddingEnd="@dimen/dp_15"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_left"
-            android:layout_width="match_parent"
-            android:overScrollMode="never"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
-        android:layout_width="@dimen/dp_460"
+        android:layout_width="@dimen/dp_740"
         android:background="@color/white"
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:fillViewport="true"
         android:overScrollMode="never">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:padding="@dimen/dp_20"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv_right_title"
-                android:layout_width="wrap_content"
-                android:text="领导班子政治建设考察情况"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_height="wrap_content"/>
+            <include
+                android:id="@+id/layout_bm"
+                layout="@layout/activity_gb_drawer_right_bm"
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="match_parent" />
 
-            <TextView
-                android:id="@+id/tv_right_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/dp_40"
-                tools:text="2020"
-                app:layout_constraintTop_toBottomOf="@+id/tv_right_title"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:drawableRight="@mipmap/ic_down"
-                android:layout_marginTop="@dimen/dp_20"
-                android:background="@drawable/shape_db1b21_fce8e6_r5"
-                android:minWidth="@dimen/dp_140"
-                android:paddingStart="@dimen/dp_20"
-                android:gravity="center"
-                android:paddingEnd="@dimen/dp_15"/>
+            <include
+                android:id="@+id/layout_info"
+                layout="@layout/activity_gb_drawer_right_parent"
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="match_parent" />
 
-            <TextView
-                android:id="@+id/tv_right_content"
-                android:layout_width="0dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_right_btn"
-                android:layout_marginTop="@dimen/dp_30"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:text="sssssssssssssss"
-                android:layout_height="0dp"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </FrameLayout>
 
 
     </androidx.core.widget.NestedScrollView>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
