--- a/Cadres/app/src/main/res/layout/dialog_list_item.xml
+++ b/Cadres/app/src/main/res/layout/dialog_list_item.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:paddingStart="@dimen/dp_15"
+    android:background="@drawable/button_select"
     android:paddingEnd="@dimen/dp_15"
-    android:paddingTop="@dimen/dp_20">
+    android:paddingTop="@dimen/dp_10"
+    android:paddingBottom="@dimen/dp_10">
 
 </TextView>
