--- a/Cadres/app/src/main/res/layout/activity_bm_drawer.xml
+++ b/Cadres/app/src/main/res/layout/activity_bm_drawer.xml
@@ -8,7 +8,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/activity_bm"
+        layout="@layout/activity_bm2"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
