--- a/Cadres/app/src/main/res/layout/item_bm_left.xml
+++ b/Cadres/app/src/main/res/layout/item_bm_left.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/tv_dwmc"
         android:layout_width="@dimen/dp_120"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_60"
         android:padding="@dimen/dp_5"
         android:minLines="3"
         android:textSize="@dimen/sp_12"
